Latest updates based on consulting work.

--- a/Julmar.Wpf.Helpers.2008/trunk/Julmar.Wpf.Behaviors/Julmar.Wpf.Behaviors.2008.csproj
+++ b/Julmar.Wpf.Helpers.2008/trunk/Julmar.Wpf.Behaviors/Julmar.Wpf.Behaviors.2008.csproj
@@ -42,12 +42,18 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
-    <Reference Include="System.Windows.Interactivity, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Windows.Interactivity, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>Dependencies\VS2008\System.Windows.Interactivity.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Xml" />
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Actions\ApplyEffect.cs" />
     <Compile Include="Actions\InvokeCommand.cs" />
     <Compile Include="Globals.cs" />
     <Compile Include="Interactivity\BindingTrigger.cs" />
@@ -76,8 +82,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Dependencies\System.Windows.Interactivity.dll" />
-    <Resource Include="Dependencies\System.Windows.Interactivity.xml" />
+    <None Include="Dependencies\System.Windows.Interactivity.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
