--- a/Julmar.Wpf.Helpers.2008/trunk/Julmar.Wpf.Behaviors/Julmar.Wpf.Behaviors.csproj
+++ b/Julmar.Wpf.Helpers.2008/trunk/Julmar.Wpf.Behaviors/Julmar.Wpf.Behaviors.csproj
@@ -73,6 +73,8 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Actions\ApplyEffect.cs" />
+    <Compile Include="Actions\ChangeThemeAction.cs" />
     <Compile Include="Actions\InvokeCommand.cs" />
     <Compile Include="Globals.cs" />
     <Compile Include="Interactivity\BindingTrigger.cs" />
@@ -86,6 +88,7 @@
     <Compile Include="Interactivity\ScrollbarPreviewBehavior.cs" />
     <Compile Include="Interactivity\ScrollingPreviewBehavior.cs" />
     <Compile Include="Interactivity\SelectTextOnFocusBehavior.cs" />
+    <Compile Include="Interactivity\ViewModelTrigger.cs" />
     <Compile Include="Interactivity\ViewportSynchronizerBehavior.cs" />
     <Compile Include="Interactivity\WatermarkTextBehavior.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
