--- a/Julmar.Wpf.Helpers.2008/trunk/Julmar.Wpf.Behaviors/Julmar.Wpf.Behaviors.2008.csproj
+++ b/Julmar.Wpf.Helpers.2008/trunk/Julmar.Wpf.Behaviors/Julmar.Wpf.Behaviors.2008.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Actions\ApplyEffect.cs" />
+    <Compile Include="Actions\ChangeThemeAction.cs" />
     <Compile Include="Actions\InvokeCommand.cs" />
     <Compile Include="Globals.cs" />
     <Compile Include="Interactivity\BindingTrigger.cs" />
@@ -67,6 +68,7 @@
     <Compile Include="Interactivity\ScrollbarPreviewBehavior.cs" />
     <Compile Include="Interactivity\ScrollingPreviewBehavior.cs" />
     <Compile Include="Interactivity\SelectTextOnFocusBehavior.cs" />
+    <Compile Include="Interactivity\ViewModelTrigger.cs" />
     <Compile Include="Interactivity\ViewportSynchronizerBehavior.cs" />
     <Compile Include="Interactivity\WatermarkTextBehavior.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
