--- a/Julmar.Wpf.Helpers.2008/trunk/Julmar.Wpf.Helpers/Julmar.Wpf.Helpers.csproj
+++ b/Julmar.Wpf.Helpers.2008/trunk/Julmar.Wpf.Helpers/Julmar.Wpf.Helpers.csproj
@@ -79,18 +79,24 @@
     <Compile Include="Behaviors\EventCommander.cs" />
     <Compile Include="Behaviors\HelpProvider.cs" />
     <Compile Include="Behaviors\LifetimeEvent.cs" />
+    <Compile Include="Behaviors\PasswordBoxHelper.cs" />
     <Compile Include="Behaviors\RenderBehavior.cs" />
     <Compile Include="Behaviors\SynchronizeScrollingBehavior.cs" />
     <Compile Include="Converters\DoubleToInteger.cs" />
+    <Compile Include="Converters\IntegerToBooleanConverter.cs" />
     <Compile Include="Converters\KeyToResourceConverter.cs" />
     <Compile Include="Converters\MultiConverter.cs" />
-    <Compile Include="Converters\RefreshValueConverter.cs" />
+    <Compile Include="Converters\NullOrEmptyBooleanConverter.cs" />
+    <Compile Include="Converters\NullOrEmptyVisibilityConverter.cs" />
     <Compile Include="DeferredBinder.cs" />
     <Compile Include="Extensions\Designer.cs" />
+    <Compile Include="FrameworkElementAdorner.cs" />
     <Compile Include="Globals.cs" />
     <Compile Include="Interfaces\IMessageMediator.cs" />
     <Compile Include="Interfaces\IMessageVisualizer.cs" />
+    <Compile Include="Interfaces\IRunningNotification.cs" />
     <Compile Include="Interfaces\IUIVisualizer.cs" />
+    <Compile Include="Interfaces\IViewModelTrigger.cs" />
     <Compile Include="Markup\LinearGradientBrushExtension.cs" />
     <Compile Include="Markup\ViewModelCreatorExtension.cs" />
     <Compile Include="Extensions\DependencyObjectExtensions.cs" />
@@ -112,8 +118,10 @@
     <Compile Include="Mvvm\CloseRequestEventArgs.cs" />
     <Compile Include="Mvvm\EditingViewModel.cs" />
     <Compile Include="Mvvm\SimpleViewModel.cs" />
+    <Compile Include="Mvvm\ViewModelTrigger.cs" />
     <Compile Include="ObservableDictionary.cs" />
     <Compile Include="PropertyObserver.cs" />
+    <Compile Include="UI\RunningNotification.cs" />
     <Compile Include="Validations\ValidatingViewModel.cs" />
     <Compile Include="SystemInfo.cs" />
     <Compile Include="UI\MessageVisualizer.cs" />
