--- a/Julmar.Wpf.Helpers.2008/trunk/Julmar.Wpf.Helpers/Julmar.Wpf.Helpers.2008.csproj
+++ b/Julmar.Wpf.Helpers.2008/trunk/Julmar.Wpf.Helpers/Julmar.Wpf.Helpers.2008.csproj
@@ -12,7 +12,7 @@
     <AssemblyName>JulMar.Wpf.Helpers</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
     <AssemblyOriginatorKeyFile>julmar.mvvm.pfx</AssemblyOriginatorKeyFile>
     <TargetFrameworkSubset>Client</TargetFrameworkSubset>
   </PropertyGroup>
@@ -46,6 +46,7 @@
       <RequiredTargetFramework>3.0</RequiredTargetFramework>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition, Version=2010.2.11.0, Culture=neutral, processorArchitecture=MSIL" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -75,8 +76,8 @@
     <Compile Include="Extensions\Designer.cs" />
     <Compile Include="FrameworkElementAdorner.cs" />
     <Compile Include="Globals.cs" />
+    <Compile Include="Interfaces\IDynamicLoader.cs" />
     <Compile Include="Interfaces\IMessageVisualizer.cs" />
-    <Compile Include="Interfaces\IRunningNotification.cs" />
     <Compile Include="Interfaces\IUIVisualizer.cs" />
     <Compile Include="Interfaces\IViewModelTrigger.cs" />
     <Compile Include="Markup\LinearGradientBrushExtension.cs" />
@@ -100,11 +101,12 @@
     <Compile Include="Mvvm\CloseRequestEventArgs.cs" />
     <Compile Include="Mvvm\EditingViewModel.cs" />
     <Compile Include="Interfaces\IMessageMediator.cs" />
+    <Compile Include="Mvvm\MefHelpers.cs" />
     <Compile Include="Mvvm\SimpleViewModel.cs" />
+    <Compile Include="Mvvm\ViewModelLocator.cs" />
     <Compile Include="Mvvm\ViewModelTrigger.cs" />
     <Compile Include="ObservableDictionary.cs" />
     <Compile Include="PropertyObserver.cs" />
-    <Compile Include="UI\RunningNotification.cs" />
     <Compile Include="Validations\ValidatingViewModel.cs" />
     <Compile Include="SystemInfo.cs" />
     <Compile Include="UI\MessageVisualizer.cs" />
@@ -130,6 +132,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="julmar.mvvm.pfx" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Dependencies\System.ComponentModel.Composition.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
