--- a/Julmar.Wpf.Helpers/Julmar.Wpf.Helpers/Julmar.Wpf.Helpers.csproj
+++ b/Julmar.Wpf.Helpers/Julmar.Wpf.Helpers/Julmar.Wpf.Helpers.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Converters\NumericToDoubleConverter.cs" />
     <Compile Include="Interfaces\INotificationVisualizer.cs" />
     <Compile Include="MTObservableCollection.cs" />
+    <Compile Include="Mvvm\AsyncDelegateCommand.cs" />
     <Compile Include="Mvvm\CloseRequestEventArgs.cs" />
     <Compile Include="Mvvm\EditingViewModel.cs" />
     <Compile Include="Mvvm\SimpleViewModel.cs" />
