--- a/Julmar.Wpf.Helpers/test/UndoRedoTest/UndoTest.csproj
+++ b/Julmar.Wpf.Helpers/test/UndoRedoTest/UndoTest.csproj
@@ -77,6 +77,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Person.xaml.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
