--- a/Julmar.Wpf.Helpers/Julmar.Core/Julmar.Core.csproj
+++ b/Julmar.Wpf.Helpers/Julmar.Core/Julmar.Core.csproj
@@ -76,6 +76,7 @@
   <ItemGroup>
     <Compile Include="Collections\CollectionChangedEventArgs.cs" />
     <Compile Include="CollectionObserver.cs" />
+    <Compile Include="Collections\CollectionExtensions.cs" />
     <Compile Include="Collections\ElementChangedEventArgs.cs" />
     <Compile Include="Concurrency\ObjectLockExtensions.cs" />
     <Compile Include="Concurrency\ReaderWriterLockSlimExtensions.cs" />
