--- a/Julmar.Wpf.Helpers/test/Julmar.Wpf.Helpers.UnitTests/Julmar.Wpf.Helpers.UnitTests.csproj
+++ b/Julmar.Wpf.Helpers/test/Julmar.Wpf.Helpers.UnitTests/Julmar.Wpf.Helpers.UnitTests.csproj
@@ -99,6 +99,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\CollectionExtensionMoveTests.cs" />
+    <Compile Include="Core\CollectionExtensionSwapTests.cs" />
     <Compile Include="Converters\ArrayToStringConverterTest.cs" />
     <Compile Include="Extensions\CollectionExtensionsTest.cs" />
     <Compile Include="Core\CollectionObserverTest.cs" />
