--- a/Julmar.Wpf.Helpers/Julmar.Core/Julmar.Core.csproj
+++ b/Julmar.Wpf.Helpers/Julmar.Core/Julmar.Core.csproj
@@ -76,7 +76,6 @@
   <ItemGroup>
     <Compile Include="Collections\CollectionChangedEventArgs.cs" />
     <Compile Include="CollectionObserver.cs" />
-    <Compile Include="Collections\CollectionExtensions.cs" />
     <Compile Include="Collections\ElementChangedEventArgs.cs" />
     <Compile Include="Concurrency\ObjectLockExtensions.cs" />
     <Compile Include="Concurrency\ReaderWriterLockSlimExtensions.cs" />
@@ -97,7 +96,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PropertyObserver.cs" />
     <Compile Include="MessageMediatorTargetAttribute.cs" />
-    <Compile Include="Services\ServiceProvider.cs" />
+    <Compile Include="Services\ServiceLocator.cs" />
     <Compile Include="ObservableObject.cs" />
     <Compile Include="Collections\ThreadedCollection.cs" />
     <Compile Include="Undo\CollectionChangeUndo.cs" />
