--- a/Julmar.Wpf.Helpers/Julmar.Core/Julmar.Core (3.5).csproj
+++ b/Julmar.Wpf.Helpers/Julmar.Core/Julmar.Core (3.5).csproj
@@ -78,7 +78,6 @@
   <ItemGroup>
     <Compile Include="Collections\CollectionChangedEventArgs.cs" />
     <Compile Include="CollectionObserver.cs" />
-    <Compile Include="Collections\CollectionExtensions.cs" />
     <Compile Include="Collections\ElementChangedEventArgs.cs" />
     <Compile Include="Concurrency\ObjectLockExtensions.cs" />
     <Compile Include="Concurrency\ReaderWriterLockSlimExtensions.cs" />
@@ -99,9 +98,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PropertyObserver.cs" />
     <Compile Include="MessageMediatorTargetAttribute.cs" />
-    <Compile Include="Services\ServiceProvider.cs" />
     <Compile Include="ObservableObject.cs" />
     <Compile Include="Collections\ThreadedCollection.cs" />
+    <Compile Include="Services\ServiceLocator.cs" />
     <Compile Include="Undo\CollectionChangeUndo.cs" />
     <Compile Include="Undo\CollectionChangeUndoObserver.cs" />
     <Compile Include="Undo\DelegateUndo.cs" />
