Added support to manage CanExecute handlers internally per request. Added SimpleViewModel.OnPropertyChanged override for lambda form Added unit tests for new command manager event

--- a/Julmar.Wpf.Helpers/test/Julmar.Wpf.Helpers.UnitTests/Julmar.Wpf.Helpers.UnitTests.csproj
+++ b/Julmar.Wpf.Helpers/test/Julmar.Wpf.Helpers.UnitTests/Julmar.Wpf.Helpers.UnitTests.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Core\CollectionExtensionMoveTests.cs" />
     <Compile Include="Core\CollectionExtensionSwapTests.cs" />
     <Compile Include="Converters\ArrayToStringConverterTest.cs" />
+    <Compile Include="DispatcherUtil.cs" />
     <Compile Include="Extensions\CollectionExtensionsTest.cs" />
     <Compile Include="Core\CollectionObserverTest.cs" />
     <Compile Include="MVVM\DelegatingCommandTest.cs" />
