--- a/Julmar.Wpf.Helpers/Julmar.Core/Julmar.Core (3.5).csproj
+++ b/Julmar.Wpf.Helpers/Julmar.Core/Julmar.Core (3.5).csproj
@@ -20,7 +20,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;NET35</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -28,7 +28,7 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>TRACE;NET35</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>bin\Release\Julmar.Core.XML</DocumentationFile>
@@ -80,6 +80,7 @@
     <Compile Include="CollectionObserver.cs" />
     <Compile Include="Collections\ElementChangedEventArgs.cs" />
     <Compile Include="Concurrency\ObjectLockExtensions.cs" />
+    <Compile Include="Concurrency\Range.cs" />
     <Compile Include="Concurrency\ReaderWriterLockSlimExtensions.cs" />
     <Compile Include="Interfaces\IThreadedNotifyCollection.cs" />
     <Compile Include="ExportServiceAttribute.cs" />
@@ -101,6 +102,7 @@
     <Compile Include="ObservableObject.cs" />
     <Compile Include="Collections\ThreadedCollection.cs" />
     <Compile Include="Services\ServiceLocator.cs" />
+    <Compile Include="SystemInfo.cs" />
     <Compile Include="Undo\CollectionChangeUndo.cs" />
     <Compile Include="Undo\CollectionChangeUndoObserver.cs" />
     <Compile Include="Undo\DelegateUndo.cs" />
