Added test for ExceptionExtensions.

--- a/Julmar.Wpf.Helpers/test/Julmar.Wpf.Helpers.UnitTests/Julmar.Wpf.Helpers.UnitTests.csproj
+++ b/Julmar.Wpf.Helpers/test/Julmar.Wpf.Helpers.UnitTests/Julmar.Wpf.Helpers.UnitTests.csproj
@@ -103,6 +103,7 @@
     <Compile Include="Core\CollectionExtensionSwapTests.cs" />
     <Compile Include="Converters\ArrayToStringConverterTest.cs" />
     <Compile Include="DispatcherUtil.cs" />
+    <Compile Include="Extensions\ExceptionExtensionsTest.cs" />
     <Compile Include="Extensions\CollectionExtensionsTest.cs" />
     <Compile Include="Core\CollectionObserverTest.cs" />
     <Compile Include="MVVM\DelegatingCommandTest.cs" />
