--- a/Julmar.Wpf.Helpers/test/Julmar.Wpf.Helpers.UnitTests/Julmar.Wpf.Helpers.UnitTests.csproj
+++ b/Julmar.Wpf.Helpers/test/Julmar.Wpf.Helpers.UnitTests/Julmar.Wpf.Helpers.UnitTests.csproj
@@ -102,10 +102,11 @@
     <Compile Include="Core\CollectionExtensionMoveTests.cs" />
     <Compile Include="Core\CollectionExtensionSwapTests.cs" />
     <Compile Include="Converters\ArrayToStringConverterTest.cs" />
-    <Compile Include="DispatcherUtil.cs" />
+    <Compile Include="Extensions\DispatcherExtensions.cs" />
     <Compile Include="Extensions\ExceptionExtensionsTest.cs" />
     <Compile Include="Extensions\CollectionExtensionsTest.cs" />
     <Compile Include="Core\CollectionObserverTest.cs" />
+    <Compile Include="MTObservableCollectionTest.cs" />
     <Compile Include="MVVM\DelegatingCommandTest.cs" />
     <Compile Include="Converters\MathConverterTest.cs" />
     <Compile Include="Core\MessageMediatorTest.cs" />
