Moved ObservableObject to extensions (vs. base class) Added unit tests Added new constructor to ObservableDictionary to allow ConcurrentDictionary to be used.

--- a/Julmar.Wpf.Helpers/Julmar.Wpf.Helpers/Julmar.Wpf.Helpers.csproj
+++ b/Julmar.Wpf.Helpers/Julmar.Wpf.Helpers/Julmar.Wpf.Helpers.csproj
@@ -178,7 +178,7 @@
     <None Include="Snippets\expandovm.snippet">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Mvvm\mvvmprop.snippet">
+    <None Include="Snippets\mvvmprop.snippet">
       <SubType>Designer</SubType>
     </None>
     <None Include="Snippets\wpfdp.snippet" />
